--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,3 +123,26 @@
   height: auto;
   border-radius: 0.375rem;
 }
+
+.ql-editor h1 {
+  font-size: 2.5em;
+  margin-bottom: 0.5em;
+}
+
+.ql-editor h2 {
+  font-size: 1.8em;
+  margin-top: 1em;
+  margin-bottom: 0.5em;
+}
+
+.ql-editor p {
+  margin-bottom: 1em;
+}
+
+.ql-editor .introduction {
+  font-style: italic;
+}
+
+.ql-editor .conclusion {
+  font-weight: bold;
+}
